<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="buy">购买</string>
    <string name="all"><![CDATA[全部 >]]></string>
    <string name="wait_pay">待付款</string>
    <string name="wait_send">待发货</string>
    <string name="wait_receive">待收货</string>
    <string name="sales_return">退货</string>
    <string name="str_login_or_register">登录/注册</string>


    <!-- The class name for the ScrollingChildBehavior required for AppBarLayout -->
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>



</resources>