<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.wei.mine.ui.MineFragmentViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/v_bg_header"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_user_icon_mine"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginVertical="40dp"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintStart_toStartOf="@id/v_bg_header"
        app:layout_constraintTop_toTopOf="@+id/v_bg_header"
        app:shapeAppearanceOverlay="@style/circleImageStyle"
        app:srcCompat="@drawable/icon_default_header"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_user_name_mine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@{vm.liveInfo.username??@string/str_login_or_register}"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_user_icon_mine"
        app:layout_constraintStart_toEndOf="@id/iv_user_icon_mine"
        app:layout_constraintTop_toTopOf="@id/iv_user_icon_mine"
        tools:text="rookieWai"
        />



    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_setting"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:onClick="@{()->vm.setting()}"
        app:layout_constraintTop_toTopOf="@id/v_bg_header"
        app:layout_constraintEnd_toEndOf="@id/v_bg_header"
        android:src="@drawable/setting"/>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_message"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:onClick="@{()->vm.message()}"
        app:layout_constraintTop_toTopOf="@id/v_bg_header"
        app:layout_constraintEnd_toStartOf="@id/iv_setting"
        android:src="@drawable/message"/>

    <View
        android:id="@+id/v_order"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginVertical="8dp"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/v_bg_header"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/buy"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="@id/v_order"
        app:layout_constraintTop_toTopOf="@id/v_order"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/all"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="@id/v_order"
        app:layout_constraintTop_toTopOf="@id/v_order"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_wait_pay"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:drawableTop="@drawable/wait_pay"
        android:text="@string/wait_pay"
        android:textSize="14sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/v_order"
        app:layout_constraintTop_toBottomOf="@id/tv_order"
        app:layout_constraintEnd_toStartOf="@id/tv_wait_send"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_wait_send"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:drawableTop="@drawable/wait_send"
        android:text="@string/wait_send"
        android:textSize="14sp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/tv_wait_pay"
        app:layout_constraintTop_toBottomOf="@id/tv_order"
        app:layout_constraintEnd_toStartOf="@id/tv_wait_receive"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_wait_receive"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:drawableTop="@drawable/wait_pay"
        android:text="@string/wait_receive"
        android:textSize="14sp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/tv_wait_send"
        app:layout_constraintTop_toBottomOf="@id/tv_order"
        app:layout_constraintEnd_toStartOf="@id/tv_sales_return"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_sales_return"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:drawableTop="@drawable/sales_return"
        android:text="@string/sales_return"
        android:textSize="14sp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/tv_wait_receive"
        app:layout_constraintTop_toBottomOf="@id/tv_order"
        app:layout_constraintEnd_toEndOf="@id/v_order"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_order"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <View
                android:id="@+id/v_menu"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:background="@color/colorWhite"
                app:layout_constraintTop_toTopOf="parent"
                />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_att_brand"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="   关注品牌"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/att_brand"
                android:drawableEnd="@drawable/arrow"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintTop_toTopOf="@id/v_menu"
                />

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginHorizontal="20dp"
                android:background="@color/colorDivider"
                app:layout_constraintTop_toBottomOf="@id/tv_att_brand"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_collect_comm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="   收藏商品"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/collect_comm"
                android:drawableEnd="@drawable/arrow"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@id/line1"
                />

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginHorizontal="20dp"
                android:background="@color/colorDivider"
                app:layout_constraintTop_toBottomOf="@id/tv_collect_comm"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_bro_history"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="   浏览记录"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/bro_history"
                android:drawableEnd="@drawable/arrow"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@id/line2"
                />

            <View
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginHorizontal="20dp"
                android:background="@color/colorDivider"
                app:layout_constraintTop_toBottomOf="@id/tv_bro_history"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_coupon"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="   优惠卷"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/coupon"
                android:drawableEnd="@drawable/arrow"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@id/line3"
                />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_logout_mine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="28dp"
                android:elevation="0.1dp"
                android:gravity="center"
                android:text="退出登录"
                android:textColor="@color/colorSecondaryText"
                android:textSize="16sp"
                android:backgroundTint="@color/colorWhite"
                app:cornerRadius="20dp"
                app:elevation="0.1dp"
                app:layout_constraintTop_toBottomOf="@id/v_menu"
                />

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/pb_mine"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="invisible"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>

</layout>